вторая секция и адаптив первой и второй секции

--- a/src/pug/pages/home.pug
+++ b/src/pug/pages/home.pug
@@ -8,6 +8,8 @@ html(lang="ru")
 		include ./../sections/_header.pug
 
 		include ./../sections/_homeBegin.pug
+
+		include ./../sections/_homeOrganization.pug
 		
 		include ./../sections/_footer.pug
 		
