--- a/src/scss/blocks/_vars.scss
+++ b/src/scss/blocks/_vars.scss
@@ -8,10 +8,12 @@
 }
 
 $mediaWidth1: 768px;
+$mediaWidth2: 320px;
 @mixin mediaWidth1{
-	@media(max-width: $mediaWidth1){
+	@media(max-width: $mediaWidth1) and (min-width: $mediaWidth2){
 		@content;
 	}
 }
+
 
 
