категории, преимущества, отзывы - начало

--- a/src/pug/sections/_homeBegin.pug
+++ b/src/pug/sections/_homeBegin.pug
@@ -3,7 +3,7 @@ section.home-begin
     source(media="(max-width: 768px)", srcset="img/home-begin-bg-mobile.webp")
     img.home-begin__bg(src="img/home-begin-bg.webp", alt="@")
   img.home-begin__path(src="img/home-begin-bg-path.webp", alt="@")
-  img.noise(src="img/noise.webp", alt="@")
+  include ./../layouts/_noise.pug
   .home-begin__box
     .home-begin__content 
       h1.home-begin__title Организация ваших лучших эмоций
