--- a/src/pug/sections/_homeOrganization.pug
+++ b/src/pug/sections/_homeOrganization.pug
@@ -1,5 +1,5 @@
 section.home-organization 
-	img.noise(src="img/noise.webp", alt="@")
+	include ./../layouts/_noise.pug
 	.home-organization__box 
 		picture
 			source(media="(max-width: 768px)", srcset="img/svg/decor-1-mobile.svg")
