--- a/src/pug/pages/home.pug
+++ b/src/pug/pages/home.pug
@@ -10,7 +10,17 @@ html(lang="ru")
 		include ./../sections/_homeBegin.pug
 
 		include ./../sections/_homeOrganization.pug
-		
-		include ./../sections/_footer.pug
+
+		include ./../sections/_homeCategories.pug
+
+		include ./../sections/_advantages.pug
+
+		.noise-bg
+			include ./../layouts/_noise.pug
+			.home-reviews 
+				h3.home-reviews__title отзывы 
+				include ./../sections/_reviews.pug
+			
+			include ./../sections/_footer.pug
 		
 		include ./../sections/_scripts.pug
