--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -50,6 +50,7 @@ html{
 body{
 	font-family: var(--font-0);
 	color: var(--color-0);
+	background: var(--color-1);
 }
 ul{
 	margin: 0;
@@ -87,6 +88,10 @@ input, textarea{
 	}
 }
 
+.swiper-wrapper{
+	
+}
+
 .mobile{
 	display: none;
 	@include mediaWidth1{
@@ -97,6 +102,21 @@ input, textarea{
 	@include mediaWidth1{
 		display: none;
 	}
+}
+
+.noise-bg{
+	position: relative;
+}
+
+.noise{
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+	object-fit: cover;
+  pointer-events: none;
 }
 
 // ~~~~~~~~~~~~~~~~~~~ Стилизация скроллбара
@@ -158,3 +178,6 @@ input, textarea{
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 @import 'blocks/homeBegin';
 @import 'blocks/homeOrganization';
+@import 'blocks/categories';
+@import 'blocks/advantages';
+@import 'blocks/reviews';
