секции отзывы и наша команда с адаптацией

--- a/src/pug/pages/home.pug
+++ b/src/pug/pages/home.pug
@@ -20,6 +20,8 @@ html(lang="ru")
 			.home-reviews 
 				h3.home-reviews__title отзывы 
 				include ./../sections/_reviews.pug
+
+			include ./../sections/_team.pug
 			
 			include ./../sections/_footer.pug
 		
