--- a/src/scss/blocks/_templates.scss
+++ b/src/scss/blocks/_templates.scss
@@ -22,6 +22,20 @@
 
 }
 
+.noise-bg{
+	position: relative;
+}
+.noise{
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+	object-fit: cover;
+  pointer-events: none;
+}
+
 .button-box{
   position: relative;
 }
@@ -162,6 +176,17 @@
       top: -1.7rem;
       width: 35.3rem;
     }
+  }
+}
+
+.section-title{
+  font-size: 6.3rem;
+  font-weight: 500;
+  letter-spacing: -0.63px;
+  text-transform: uppercase;
+  @include mediaWidth1{
+    font-size: 2.5rem;
+    letter-spacing: 0.25px;
   }
 }
 
