секция - наша команда, форма обратной связи и футер

--- a/src/pug/pages/home.pug
+++ b/src/pug/pages/home.pug
@@ -22,6 +22,8 @@ html(lang="ru")
 				include ./../sections/_reviews.pug
 
 			include ./../sections/_team.pug
+
+			include ./../sections/_feedback.pug
 			
 			include ./../sections/_footer.pug
 		
