--- a/src/scss/blocks/_vars.scss
+++ b/src/scss/blocks/_vars.scss
@@ -7,6 +7,8 @@
 	--color-1: #232323;
 	--color-2: #808080;
 	--color-3: #605550;
+	--color-4: #EDE9E3;
+	--color-5: #181818;
 }
 
 $mediaWidth1: 768px;
