разводящая страница каталога услуг - первый экран

--- a/src/pug/pages/catalog.pug
+++ b/src/pug/pages/catalog.pug
@@ -2,12 +2,14 @@
 html(lang="ru")
 	head
 		include ./../sections/_head.pug
-		title Site | Page 2
+		title Moments | Разводящая страница
 	body
 
 		include ./../sections/_header.pug
 
-		
+		include ./../sections/_catalogBegin.pug
+
+		include ./../sections/_catalogPresent.pug
 
 		include ./../sections/_footer.pug
 
