--- a/src/pug/pages/home.pug
+++ b/src/pug/pages/home.pug
@@ -2,7 +2,7 @@
 html(lang="ru")
 	head
 		include ./../sections/_head.pug
-		title Site | Главная
+		title Moments | Главная
 	body
 		
 		include ./../sections/_header.pug
