--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -19,7 +19,7 @@ html(lang="ru")
 			.index-page ul a{
 				position: relative;
 				display: block;
-				color: #000;
+				color: #FFF;
 				font-size: 20px;
 			}
 			.index-page ul a:after{
@@ -48,7 +48,7 @@ html(lang="ru")
 		menu = [
 			{title: 'Templates',  href: 'templates.html'},
 			{title: 'Главная',    href: 'home.html', completed: true},
-			{title: 'Страница 2', href: 'page2.html'},
+			{title: 'Разводящая страница', href: 'catalog.html'},
 			{title: 'Страница 3', href: 'page3.html'},
 			{title: 'Страница 4', href: 'page4.html'}
 		]
