--- a/src/pug/sections/_advantages.pug
+++ b/src/pug/sections/_advantages.pug
@@ -11,7 +11,7 @@
 section.advantages
   include ./../layouts/_noise.pug
   .advantages__box
-    h2.advantages__title #[span.advantages__title--padding] Почему стоит работать именно с нами ?
+    h2.advantages__title #[span.advantages__title--padding] Почему стоит работать именно с нами&nbsp;?
     .advantages__items 
       each item, i in advantages
         .advantage
