--- a/src/scss/blocks/_categories.scss
+++ b/src/scss/blocks/_categories.scss
@@ -7,11 +7,12 @@
 }
 
 .category{
+  position: relative;
+  z-index: 1;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 45rem;
-  background: var(--color-2);
   @include mediaWidth1{
     height: 18.3rem;
   }
@@ -26,6 +27,27 @@
       font-size: 1.6rem;
       letter-spacing: -0.158px;
     }
+  }
+
+  &__foto{
+    position: absolute;
+    z-index: -2;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  &:after{
+    content: '';
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(35, 35, 35, 0.55);
   }
 
   &--border{
