--- a/src/scss/blocks/_homeBegin.scss
+++ b/src/scss/blocks/_homeBegin.scss
@@ -7,6 +7,13 @@
     height: 55rem;
   }
 
+  &--catalog{
+    height: 98rem;
+    @include mediaWidth1{
+      height: 80rem;
+    }
+  }
+
   &__bg{
     position: absolute;
     z-index: -1;
@@ -43,13 +50,27 @@
       padding-left: 2rem;
       padding-right: 2rem;
     }
+    &--catalog{
+      align-items: flex-end;
+      padding-top: 0;
+      padding-bottom: 15rem;
+      @include mediaWidth1{
+        padding-bottom: 12rem;
+      }
+    }
   }
 
   &__content{
     width: 70rem;
     @include mediaWidth1{
-      width: 100%;
       width: 30rem;
+    }
+
+    &--catalog{
+      width: 80rem;
+      @include mediaWidth1{
+        width: 30rem;
+      }
     }
   }
 
@@ -66,6 +87,20 @@
       line-height: normal;
       letter-spacing: 0.25px;
       text-align: right;
+    }
+
+    &--catalog{
+      margin-bottom: 0;
+      font-size: 7.5rem;
+      font-weight: 600;
+      letter-spacing: -0.75px;
+      text-align: right;
+      @include mediaWidth1{
+        font-size: 2.5rem;
+        line-height: normal;
+        letter-spacing: 0.25px;
+        text-align: right;
+      }
     }
   }
 
@@ -90,6 +125,11 @@
       width: 0.3rem;
       height: 50rem;
       background: var(--color-0);
+    }
+    &--catalog{
+      &:before{
+        height: 44rem;
+      }
     }
     @include mediaWidth1{
       display: none;
