--- a/src/pug/pages/catalog.pug
+++ b/src/pug/pages/catalog.pug
@@ -9,7 +9,14 @@ html(lang="ru")
 
 		include ./../sections/_catalogBegin.pug
 
-		include ./../sections/_catalogPresent.pug
+		.noise-bg
+			include ./../layouts/_noise.pug
+
+			include ./../sections/_catalogPresent.pug
+
+			include ./../sections/_catalogCategories.pug
+
+			include ./../sections/_catalogBanner.pug
 
 		include ./../sections/_footer.pug
 
