--- a/src/pug/sections/_catalogPresent.pug
+++ b/src/pug/sections/_catalogPresent.pug
@@ -1,2 +1,13 @@
 section.catalog-present
   .catalog-present__box
+    h2.catalog-present__title предложение руки #[br] #[span.catalog-present__padding и сердца,] #[br] #[span.catalog-present__padding перед которым] #[br] невозможно устоять
+    .catalog-present__padding
+      p.catalog-present__text От яркого полета на вертолете и уютного романтического ужина в оранжерее, до публичного #[span.catalog-present__text--mobilemargin иммерсивного шоу на улицах европейского старинного городка или известного музея, арендованного только для вас двоих]
+      .catalog-present__fotobox
+        img.catalog-present__decor(src="img/svg/decor-2.svg", alt="@")
+        h3.catalog-present__fototext организуем #[br] #[span.catalog-present__fototext--paddingmobile предложения руки] #[br] и сердца «под ключ» #[br] в россии и за рубежом
+        picture
+          source(media="(max-width: 768px)", srcset="img/catalog-present-mobile.webp", alt="@")
+          img.catalog-present__foto(src="img/catalog-present.webp", alt="@")
+      p.catalog-present__text.catalog-present__text--marginbottom Откройте для себя новые горизонты романтики, отправьтесь в удивительное путешествие ярких #[span.catalog-present__text--mobilemargin эмоций и незабываемых впечатлений на белоснежной яхте, на действующем маяке, во время приватного сеанса] в кинотеатре или на огромном стадионе, закрытом специально под вас. 
+      include ./../layouts/_buttonVibratScenariy.pug
