--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -166,4 +166,5 @@ input, textarea{
 @import 'blocks/reviews';
 @import 'blocks/team';
 @import 'blocks/feedback';
-@import 'blocks/catalogPresent'
+@import 'blocks/catalogPresent';
+@import 'blocks/catalogBanner';
