--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -168,3 +168,4 @@ input, textarea{
 @import 'blocks/feedback';
 @import 'blocks/catalogPresent';
 @import 'blocks/catalogBanner';
+@import 'blocks/process';
