--- a/src/pug/pages/catalog.pug
+++ b/src/pug/pages/catalog.pug
@@ -10,13 +10,16 @@ html(lang="ru")
 		include ./../sections/_catalogBegin.pug
 
 		.noise-bg
-			include ./../layouts/_noise.pug
 
 			include ./../sections/_catalogPresent.pug
 
 			include ./../sections/_catalogCategories.pug
 
 			include ./../sections/_catalogBanner.pug
+
+			include ./../sections/_process.pug
+
+			include ./../sections/_feedback.pug
 
 		include ./../sections/_footer.pug
 
