--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -48,8 +48,8 @@ html(lang="ru")
 		menu = [
 			{title: 'Templates',  href: 'templates.html'},
 			{title: 'Главная',    href: 'home.html', completed: true},
-			{title: 'Разводящая страница', href: 'catalog.html'},
-			{title: 'Страница 3', href: 'page3.html'},
+			{title: 'Разводящая страница', href: 'catalog.html', completed: true},
+			{title: 'Маяк', href: 'mayak.html'},
 			{title: 'Страница 4', href: 'page4.html'}
 		]
 
