--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -169,3 +169,6 @@ input, textarea{
 @import 'blocks/catalogPresent';
 @import 'blocks/catalogBanner';
 @import 'blocks/process';
+@import 'blocks/serviceHome';
+@import 'blocks/serviceInfo';
+@import 'blocks/variants';
