--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -169,6 +169,9 @@ input, textarea{
 @import 'blocks/catalogPresent';
 @import 'blocks/catalogBanner';
 @import 'blocks/process';
+@import 'blocks/service';
 @import 'blocks/serviceHome';
 @import 'blocks/serviceInfo';
 @import 'blocks/variants';
+@import 'blocks/addServices';
+@import 'blocks/similar';
