--- a/src/pug/pages/mayak.pug
+++ b/src/pug/pages/mayak.pug
@@ -3,7 +3,7 @@ html(lang="ru")
 	head
 		include ./../sections/_head.pug
 		title Moments | Маяк
-	body
+	body.service
 
 		include ./../sections/_headerBlack.pug
 
@@ -14,6 +14,16 @@ html(lang="ru")
 			include ./../sections/_serviceInfo.pug
 
 			include ./../sections/_variants.pug
+
+			include ./../sections/_addServicesMayak.pug
+
+			include ./../sections/_similarMayak.pug
+
+			section.service-reviews 
+				h5.section-title.service-reviews__title отзывы
+				include ./../sections/_reviews.pug
+
+			include ./../sections/_feedback.pug
 
 			include ./../sections/_footer.pug
 		
