--- a/src/pug/sections/_headerBlack.pug
+++ b/src/pug/sections/_headerBlack.pug
@@ -1,4 +1,6 @@
 include ./../mixins/_variant.pug
+include ./../mixins/_addServices.pug
+include ./../mixins/_similar.pug
 
 header.header 
   .header__box 
