--- a/src/pug/sections/_variants.pug
+++ b/src/pug/sections/_variants.pug
@@ -1,7 +1,8 @@
 section.variants 
 	.variants__box
-		h2.section-title.variants__title Выбери свой идеальный вариант #[br] предложения руки и сердца на маяке
+		h2.section-title.variants__title Выбери свой идеальный вариант #[br.desktop] предложения #[span.variants__title--mobilepadding руки и сердца на маяке]
 		.variants__items
-			+variant(true, '34 000', '39 900', list=['Аренда маяка только для вас двоих','Ужин на маяке с ресторанным обслуживанием и депозитом 7 000 руб.','Романтическое оформление свечами и лепестками роз','Романтическая музыка','Сервировка','Организация и координация'])
-			+variant(false, '49 900', '57 900', list=['asdf', 'asdf'])
-			+variant(false, '129 900', '150 900', list=['asdf', 'asdf'])
+			+variant(true, '34 000', '39 900', list=['Аренда маяка только для вас двоих','Ужин на маяке с ресторанным обслуживанием и депозитом 7 000 руб.','Романтическое оформление свечами и лепестками роз','Романтическая музыка','Сервировка','Организация и координация'], 'Продолжительность свидания 2 часа')
+			+variant(false, '49 900', '57 900', list=['Аренда маяка только для вас двоих', 'Ужин на маяке с ресторанным обслуживанием и депозитом 7 000 руб.', 'Романтическое оформление свечами и лепестками роз', 'Сервировка', 'Организация и координация', 'Фотосессия', 'Живая музыка (скрипка или саксофон)', 'Дизайнерский букет цветов на выбор'], 'Продолжительность свидания 2 часа')
+			+variant(false, '129 900', '150 900', list=['Ужин в действующем маяке с депозитом на блюда', 'Романтическое декорирование свечами, лепестками роз, шарами', 'Цветочная композиция на стол', 'Сервировка индивидуальная', 'Организация и координация', 'Фотосессия', 'Живая музыка (скрипка или саксофон)', 'Дизайнерский букет цветов', 'Съемка видео и монтаж ролика', 'Салют или огненная надпись'], 'Продолжительность свидания 2 часа')
+
