--- a/src/scss/blocks/_variants.scss
+++ b/src/scss/blocks/_variants.scss
@@ -1,27 +1,49 @@
 .variants{
 
-  padding-bottom: 15rem;
+  margin-bottom: 15rem;
+  @include mediaWidth1{
+    margin-bottom: 8rem;
+  }
 
   &__box{
     width: 168rem;
     margin: 0 auto;
+    @include mediaWidth1{
+      width: 35.3rem;
+    }
   }
 
   &__title{
     margin-bottom: 6rem;
     padding-left: 9rem;
+    @include mediaWidth1{
+      padding-left: 0;
+    }
+    &--mobilepadding{
+      @include mediaWidth1{
+        display: block;
+        padding-left: 5.2rem;
+      }
+    }
   }
 
   &__items{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 5rem;
+    @include mediaWidth1{
+      grid-template-columns: repeat(1, 1fr);
+      gap: 3rem;
+    }
   }
 
 }
 
 .variant{
   position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 55rem;
   padding-top: 3rem;
   padding-bottom: 5rem;
   padding-right: 1rem;
@@ -29,22 +51,41 @@
   border: 1px solid var(--color-0);
   background: var(--color-1);
 
+  @include mediaWidth1{
+    height: auto;
+    padding-top: 2rem;
+    padding-bottom: 3.7rem;
+    padding-left: 3rem;
+  }
+
   &__head{
     margin-bottom: 4rem;
     font-family: var(--font-1);
     font-size: 3.4rem;
     letter-spacing: -0.34px;
     text-transform: uppercase;
+    @include mediaWidth1{
+      margin-bottom: 1.5rem;
+      font-size: 1.8rem;
+      letter-spacing: -0.182px;
+    }
   }
 
   &__name{
     line-height: 3.3rem;
+    @include mediaWidth1{
+      line-height: 1.8rem;
+    }
   }
 
   &__price{
     display: flex;
     gap: 2rem;
     line-height: 3.3rem;
+    @include mediaWidth1{
+      line-height: 1.8rem;
+      gap: 1rem;
+    }
   }
   
   &__pricetext{
@@ -84,6 +125,12 @@
     font-size: 1.8rem;
     line-height: 2.1rem;
     letter-spacing: 0.18px;
+    @include mediaWidth1{
+      padding-left: 1rem;
+      font-size: 0.9rem;
+      line-height: 1.1rem;
+      letter-spacing: 0.085px;
+    }
     &:after{
       content: '';
       position: absolute;
@@ -93,7 +140,27 @@
       height: 0.3rem;
       border-radius: 50%;
       background: var(--color-0);
+      @include mediaWidth1{
+        width: 0.2rem;
+        height: 0.2rem;
+      }
     }
+  }
+
+  &__add{
+    font-size: 1.8rem;
+    line-height: 2.1rem;
+    letter-spacing: 0.18px;
+    @include mediaWidth1{
+      margin-bottom: 4rem;
+      font-size: 0.9rem;
+      line-height: 1.1rem;
+      letter-spacing: 0.085px;
+    }
+  }
+
+  &__buttonbox{
+    margin-top: auto;
   }
 }
 
@@ -105,7 +172,6 @@
     top: -1.1rem;
     left: -0.8rem;
     width: 103%;
-    height: 108%;
-
+    height: 103%;
   }
 }
