модальное окно с формой

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -49,7 +49,7 @@ html(lang="ru")
 			{title: 'Templates',  href: 'templates.html'},
 			{title: 'Главная',    href: 'home.html', completed: true},
 			{title: 'Разводящая страница', href: 'catalog.html', completed: true},
-			{title: 'Маяк', href: 'mayak.html'},
+			{title: 'Маяк', href: 'mayak.html', completed: true},
 			{title: 'Страница 4', href: 'page4.html'}
 		]
 
