--- a/src/pug/pages/templates.pug
+++ b/src/pug/pages/templates.pug
@@ -27,6 +27,8 @@ html(lang="ru")
 
 				include ./../layouts/_buttonHochu.pug
 
+				include ./../layouts/_popupWithForm.pug
+
 
 		include ./../sections/_footer.pug
 		
