--- a/src/pug/sections/_head.pug
+++ b/src/pug/sections/_head.pug
@@ -6,6 +6,8 @@ link(rel="icon", href="img/favicon.ico", type="image/x-icon")
 
 link(rel="stylesheet", href="https://use.fontawesome.com/releases/v6.2.1/css/all.css")
 
+link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css")
+
 link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css")
 
 link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css")
